--- a/index.html
+++ b/index.html
@@ -77,34 +77,34 @@
   </header>
   <main>
     <h1 class="visually-hidden">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-    <section>
+    <section class="features">
       <h2 class="visually-hidden">Список групп товаров и услуг</h2>
-      <ul>
-        <li>
+      <ul class="features-list">
+        <li class="features-item">
           <a href="">
             <p>Материалы</p>
             <p>На любой вкус</p>
           </a>
         </li>
-        <li>
+        <li class="features-item">
           <a href="">
             <p>Инструмент</p>
             <p>На все случаи</p>
           </a>
         </li>
-        <li>
+        <li class="features-item">
           <a href="">
             <p>Техника</p>
             <p>Для стройки</p>
           </a>
         </li>
-        <li>
+        <li class="features-item">
           <a href="">
             <p>Скидка 50%</p>
             <p>На 350 товаров</p>
           </a>
         </li>
-        <li>
+        <li class="features-item">
           <a href="">
             <p>Доставка</p>
             <p>Бесплатно</p>
@@ -112,7 +112,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="features-slider">
       <h2 class="visually-hidden">Слайдер каталога</h2>
       <ul>
         <li>
@@ -143,11 +143,11 @@
       <button type="button" class="visually-hidden">Предыдущий</button>
       <button type="button" class="visually-hidden">Следующий</button>
     </section>
-    <section>
+    <section class="popular-goods">
       <h2>Популярные товары:</h2>
       <a href="">Все популярные товары</a>
-      <ul>
-        <li>
+      <ul class="popular-goods-list">
+        <li class="popular-goods-item">
           <button type="button">
             <h3>
               Перфоратор BOSCH<br>BFG 9000
@@ -167,7 +167,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="popular-goods-item">
           <button type="button">
             <h3>
               Перфоратор<br>BOSCH BFG 3000
@@ -187,7 +187,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li  class="popular-goods-item">
           <button type="button">
             <h3>
               Перфоратор BOSCH<br>BFG 6000
@@ -207,7 +207,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="popular-goods-item">
           <button type="button">
             <h3>
               Перфоратор BOSCH<br>BFG 2000
@@ -229,117 +229,124 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section  class="popular-brands">
       <h2>Популярные производители:</h2>
       <a href="">Все производители</a>
-      <ul>
-        <li><a href=""><img src="img/bosch.jpg" width="126" height="37" alt="Bosch"></a></li>
-        <li><a href=""><img src="img/makita.jpg" width="123" height="40" alt="Makita"></a></li>
-        <li><a href=""><img src="img/dewalt.jpg" width="146" height="44" alt="Dewalt"></a></li>
-        <li><a href=""><img src="img/interskol.jpg" width="200" height="88" alt="Interskol"></a></li>
-        <li><a href=""><img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi"></a></li>
-        <li><a href=""><img src="img/lg.jpg" width="121" height="73" alt="Lg"></a></li>
-        <li><a href=""><img src="img/aeg.jpg" width="151" height="96" alt="Aeg"></a></li>
-        <li><a href=""><img src="img/metabo.jpg" width="204" height="69" alt="Metabo"></a></li>
+      <ul class="popular-brands-list">
+        <li class="popular-brands-item"><a href=""><img src="img/bosch.jpg" width="126" height="37" alt="Bosch"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/makita.jpg" width="123" height="40" alt="Makita"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/dewalt.jpg" width="146" height="44" alt="Dewalt"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/interskol.jpg" width="200" height="88" alt="Interskol"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/lg.jpg" width="121" height="73" alt="Lg"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/aeg.jpg" width="151" height="96" alt="Aeg"></a></li>
+        <li class="popular-brands-item"><a href=""><img src="img/metabo.jpg" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
-    <section>
+    <section class="services">
       <h2>Сервисы</h2>
       <p>Хороший Интернет-магазин отличется от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать
         ваши покупки приятными.</p>
       <ul>
-        <li><button type="button">Доставка</button></li>
-        <li><button type="button">Гарантия</button></li>
-        <li><button type="button">Кредит</button></li>
+        <li><button class="services-button" type="button">Доставка</button></li>
+        <li><button class="services-button" type="button">Гарантия</button></li>
+        <li><button class="services-button" type="button">Кредит</button></li>
       </ul>
-      <ul>
-        <li>
-          <h3>Доставка</h3>
+      <ul class="services-list">
+        <li class="services-item">
           <div class="visually-hidden">
-            <p>Доставка</p>
+            <h3>Доставка</h3>
             <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо
               заработаем, поднимая его на ваш этаж!</p>
           </div>
         </li>
-        <li>
-          <h3>Гарантия</h3>
+        <li class="services-item">
           <div class="visually-hidden">
-            <p>Гарантия</p>
+            <h3>Гарантия</h3>
             <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированный его
               возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на
               новый.<br>Дом уж восстановите как-нибудь сами.</p>
           </div>
         </li>
-        <li>
-          <h3>Кредит</h3>
+        <li class="services-item">
           <div>
-            <p>Кредит</p>
+            <h3>Кредит</h3>
             <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
-            <a href="">Отправить заявку</a>
+            <a class="button" href="">Отправить заявку</a>
           </div>
         </li>
       </ul>
     </section>
-    <section>
-      <h2 class="visually-hidden">О компании</h2>
-      <p>Компания "Техномарт"</p>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
-        равнодушными любителей сэкономить на гастарбайтерах.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
-        компаниями: </p>
-      <ul>
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <a href="">Подробнее о компании</a>
-    </section>
-    <section>
-      <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами,<br> заехав к нам в офис.</p>
-      <a href=""><img src="img/map.png" width="300" height="159"
-          alt="Магазин расположен по адресу ул. Большая Конюшенная 19, Санкт-Петербург"></a>
-      <button type="button">Заблудились? Напишите нам!</button>
-    </section>
+    <div class="index-columns">
+      <section class="company_information">
+        <h2 class="visually-hidden">О компании</h2>
+        <p>Компания "Техномарт"</p>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+          равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
+          компаниями: </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="button" href="">Подробнее о компании</a>
+      </section>
+      <section>
+        <h2 class="contacts">Контакты</h2>
+        <p>Вы можете забрать товар сами,<br> заехав к нам в офис.</p>
+        <a href=""><img src="img/map.png" width="300" height="159"
+            alt="Магазин расположен по адресу ул. Большая Конюшенная 19, Санкт-Петербург"></a>
+        <button class="button" type="button">Заблудились? Напишите нам!</button>
+      </section>
+    </div>
   </main>
   <footer>
-    <a>
-      <img src="img/logo-footer.png" width="145" height="30" alt="Логотип магазина техномарт">
-    </a>
-    <p>
-      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-      +7 (812) 555-05-55
-    </p>
-    <ul>
-      <li><a href="">Компания</a></li>
-      <li><a href="">Новости</a></li>
-      <li><a href="">Каталог</a></li>
-      <li><a href="">Доставка</a></li>
-      <li><a href="">Контакты</a></li>
-      <li><a href="">Материалы</a></li>
-      <li><a href="">Техника</a></li>
-      <li><a href="">Инструмент</a></li>
-      <li><a href="">Спецпредложения</a></li>
-    </ul>
-    <p>&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
-    <ul>
-      <li><a href="">ВКонтакте</a></li>
-      <li><a href="">Фейсбук</a></li>
-      <li><a href="">Инстаграм</a></li>
-    </ul>
-    <p>
-      Обратная связь:
-      <a href="mailto:mail@htmlacademy.ru">mail.htmlacademy.ru</a>
-    </p>
-    <p>
-      Разработано:
-      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-    </p>
+    <div class="footer-top footer-columns">
+      <div class="footer-left-column">
+        <a>
+          <img src="img/logo-footer.png" width="145" height="30" alt="Логотип магазина техномарт">
+        </a>
+        <p>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          +7 (812) 555-05-55
+        </p>
+      </div>
+      <div class="footer-right-column">
+        <ul class="footer-navigation">
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p class="copyright">&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+      <ul class="social-buttons">
+        <li><a href="">ВКонтакте</a></li>
+        <li><a href="">Фейсбук</a></li>
+        <li><a href="">Инстаграм</a></li>
+      </ul>
+      <p class="feedback">
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail.htmlacademy.ru</a>
+      </p>
+      <p class="developed">
+        Разработано:
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </div>
   </footer>
 
   <section class="visually-hidden">
     <h2 class="visually-hidden">Обратная связь</h2>
-    <form>
+    <form class="feeadback-form">
       <label>Ваше Имя:<input type="text" placeholder="Имя и Фамилия" value=""></label>
       <label>Ваш e-mail:<input type="email" placeholder="email@example.com" value=""></label>
       <label>Текст письма:<textarea placeholder="В свободной форме" value=""></textarea></label>
